<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item android:id="@+id/admission"
            android:title="@string/admission"
            android:icon="@drawable/ic_admission"
            />

        <item
            android:id="@+id/nav_shuttle"
            android:icon="@drawable/ic_location"
            android:title="@string/Shuttle" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_sms"
            android:title="@string/contact_us" />

        <item android:id="@+id/nav_events"
            android:title="@string/events"
            android:icon="@drawable/ic_events"
            />


    </group>

    <group
        android:id="@+id/communicate"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_app" />

    </group>

</menu>
